--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "googleapis": "^118.0.0",
-    "mysql2": "^3.2.4"
+    "mysql2": "^3.2.4",
+    "node-schedule": "^2.1.1"
   }
 }
